Adding viewport meta data to index.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta charset='utf-8' />
         <meta http-equiv="X-UA-Compatible" content="chrome=1" />
         <meta name="description" content="Resource.github.io : Current Resource open source projects" />
+        <meta name="viewport" content="initial-scale=1.0" />
         <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/styles.css">
         <title>Resource.github.io</title>
         
