--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
                 <h1>Current Projects</h1>
                 <ul>
                     <li>
+                        <h2>Front End Standards</h2>
+                        <a href="https://github.com/resource/Front-End-Standards">https://github.com/resource/Front-End-Standards</a>
+                        <p>Following a style guide helps fulfill these requirements. When our code is cohesive it is easier to read and navigate; there is less friction in collaboration and innovation can flourish.</p>
+                        <p>The purpose of our style guides is not to strictly enforce one way of writing code, but rather to provide a mostly agreed-upon approach. A project's developer lead or architect has the freedom to deviate from these standards when appropriate.</p>
+                    </li>
+                    <li>
                         <h2>Backbone.Rebar</h2>
                         <a href="https://github.com/resource/backbone.rebar">https://github.com/resource/backbone.rebar</a>
                         <p>Backbone.Rebar extends the Backbone.js library with view transitions, subviews, view mediators, local storage for sync, dynamic route definitions, controllers, and a simple log wrapper. Backbone.Rebar is only 3.13kB minified and gzipped with no other dependencies being added to Backbone.</p>
