Adding experiments to github.io page

--- a/index.html
+++ b/index.html
@@ -53,6 +53,29 @@
                         <a href="https://github.com/resource/backbone.rebar">https://github.com/resource/backbone.rebar</a>
                         <p>Backbone.Rebar extends the Backbone.js library with view transitions, subviews, view mediators, local storage for sync, dynamic route definitions, controllers, and a simple log wrapper. Backbone.Rebar is only 3.13kB minified and gzipped with no other dependencies being added to Backbone.</p>
                     </li>
+
+                </ul>
+                <br>
+                <h1>Experiments</h1>
+                <ul>
+
+                    <li>
+                        <h2>lab-hello-glass</h2>
+                        <a href="https://github.com/resource/lab-hello-glass">https://github.com/resource/lab-hello-glass</a>
+                        <p>Hello World for Google Glass built using the Express web application framework for Node.js with MongoDB session support setup for deployment to Heroku.</p>
+                    </li>
+
+                    <li>
+                        <h2>lab-node-d3-wordcloud</h2>
+                        <a href="https://github.com/resource/lab-node-d3-wordcloud">https://github.com/resource/lab-node-d3-wordcloud</a>
+                        <p>Generating a wordcloud using D3.js from keyword groupings extracted from a URI using Node.js.</p>
+                    </li>
+
+                    <li>
+                        <h2>lab-node-heroku-urltoimage</h2>
+                        <a href="">https://github.com/resource/lab-node-heroku-urltoimage</a>
+                        <p>Converting a URL to an image on Heroku with PhantomJS and ExpressJS is surprisingly easy. Just takes a little bit of finesse with Buildpacks on Heroku.</p>
+                    </li>
                     
                 </ul>
             </div>
