--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
                 <ul>
 
                     <li>
+                        <h2>Angular Starterkit</h2>
+                        <a href="https://github.com/resource/angular-starterkit">https://github.com/resource/angular-starterkit</a>
+                        <p>An Angular starter-kit that uses karma, protractor, a clean folder structure, and Gulp integration with robust build config file.</p>
+                    </li>
+
+                    <li>
                         <h2>ndebug</h2>
                         <a href="https://github.com/resource/node-ndebug">https://github.com/resource/node-ndebug</a>
                         <p>Using ndebug you can easily launch the Google Chrome developer tools to interactively debug your Node.js scripts while they run, providing a very pleasant and extremely producitive debugging workflow.</p>
@@ -38,7 +44,7 @@
 
                     <li>
                         <h2>Fabricator</h2>
-                        <a href="https://github.com/resource/fabricator">https://github.com/resource/fabricator</a>
+                        <a href="https://github.com/fbrctr/fabricator">https://github.com/resource/fabricator</a>
                         <p>A DIY scaffold for creating UI toolkits.</p>
                     </li>
                     
