--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
                     <li>
                         <h2>Fabricator</h2>
-                        <a href="https://github.com/fbrctr/fabricator">https://github.com/resource/fabricator</a>
+                        <a href="https://github.com/fbrctr/fabricator">https://github.com/fbrctr/fabricator</a>
                         <p>A DIY scaffold for creating UI toolkits.</p>
                     </li>
                     
